Layout issues with older browsers, partially resolved.

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -84,7 +84,7 @@ nav{
 }
 .main_title, .main_title h1{
   color:#F4DeCb;
-  font-size:100px;
+  font-size:5.2vw;
   font-family:Montserrat;
   padding:0;
   margin:0;
@@ -93,6 +93,7 @@ nav{
   margin:2% 0 0 0;
   display:flex;
   justify-content:center;
+  align-items:center;
   flex-direction:column;
   color:#F4DeCb;
   font-size:100px;
@@ -133,7 +134,8 @@ nav{
     font-family:Montserrat;
     padding:0;
     margin:0;
-    display:block;
+    display:flex;
+    justify-content:center;
     opacity:1 !important; /*override js effect for main_container in Header component*/
 }
 .down_arrow:hover{
